Contrast issue, pag Estrategia

--- a/css/style.css
+++ b/css/style.css
@@ -255,10 +255,11 @@ E.G. THERE IS ONLY ONE BOX (CONTAINER) INSTEAD OF TWO. AND ADDED SOME STYLING TO
     font-family: 'Open Sans Condensed', sans-serif;
     font-size: 24px;
     font-weight: bold;
+    /* margin-top: 12px; */
     padding-top: 5em;
-    background-color: white;
+    background-color: rgb(95,222,57);
     /* background-color: #0b06f5; */
-    color: #0b06f5;;
+    color: #0b06f5;
     transform: rotateY(180deg);
     z-index: 1;
   }
